dataset1235/2025-2/1955397009/users/1253623235/executions/1107611404_2132966528.log
== RUN (2025-08-21 12:36:09)
-- CODE: 
Nome = input("Insira seu nome completo: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome completo: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome completo: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome completo: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome completo: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome completo: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome completo: Nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:36:59)
-- CODE: 
Nome = input("Insira seu nome completo: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome completo: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome completo: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome completo: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome completo: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome completo: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome completo: Nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 19:57:49)
-- CODE: 
Nome = input("")

print(Nome.upper())

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:30:46)
-- CODE: 
Nome = input("Insira seu nome completo: ")
print(Nome.upper))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
File "XXXX", line 2
    print(Nome.upper))
                     ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 12:37:45)
-- CODE: 
Nome = input("Insira seu nome completo: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome completo: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome completo: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome completo: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome completo: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome completo: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome completo: Nome: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 12:36:09)
-- CODE: 
Nome = input("Insira seu nome completo: ")
print("Nome:",Nome.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome completo: Nome: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome completo: Nome: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome completo: Nome: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome completo: Nome: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome completo: Nome: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome completo: Nome: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
